fix: lightbox styles in dark mode

--- a/src/styles/pic/lightbox.less
+++ b/src/styles/pic/lightbox.less
@@ -29,7 +29,9 @@
 .dark {
   .lightbox {
     filter: brightness(0.875);
-    background: lighten(@color-background-dark, 2.5%);
+    img {
+      background: lighten(@color-background-dark, 2.5%);
+    }
   }
 }
 
